<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">



        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home"
            android:background="?attr/selectableItemBackground" />

        <item
            android:id="@+id/nav_gps_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_gps_camera"
            android:background="?attr/selectableItemBackground" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera"
            android:background="?attr/selectableItemBackground" />

        <item
            android:id="@+id/nav_fetch_by_button"
            android:icon="@drawable/ic_menu_api"
            android:title="@string/menu_fetch_by_button"
            android:background="?attr/selectableItemBackground" />

        <item
            android:id="@+id/nav_gps"
            android:icon="@drawable/ic_menu_gps"
            android:title="@string/menu_gps"
            android:background="?attr/selectableItemBackground" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow"
            android:background="?attr/selectableItemBackground" />

    </group>

</menu>
